# kimi-wire

./: .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  cliff.toml  deny.toml  error.go  error_test.go  lefthook.yml  message.go  message_test.go  protocol_content.go  protocol_content_test.go  protocol_jsonrpc.go  protocol_jsonrpc_test.go  protocol_method.go  protocol_request.go  protocol_request_test.go  transport_process.go  transport_process_test.go
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
benches/: serde_roundtrip.rs
docs/: architecture.md
examples/: basic_prompt.rs  mock_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: event_roundtrip.rs  raw_wire_message_roundtrip.rs  request_roundtrip.rs
src/: client.rs  client_ext.rs  dispatch.rs  error.rs  lib.rs  message.rs  transport.rs
src/protocol/: content.rs  event.rs  jsonrpc.rs  method.rs  mod.rs  redact.rs  request.rs
tests/: bidirectional_test.rs  builder_test.rs  child_process_test.rs  client_ext_test.rs  client_test.rs  dispatch_test.rs  error_test.rs  message_test.rs  property_test.rs  roundtrip_test.rs  transport_test.rs
