[package]
name = "kimi-wire"
version = "0.2.0"
edition = "2021"
authors = ["Evgeny Khodzitsky"]
description = "Typed Rust client for the Kimi Code CLI Wire protocol"
license = "MIT"
repository = "https://github.com/ekhodzitsky/kimi-wire"
keywords = ["kimi", "wire", "jsonrpc", "cli", "agent"]
categories = ["network-programming", "command-line-utilities"]
rust-version = "1.80"
exclude = [
    ".git",
    ".omc",
    "target",
    "fuzz/target",
    "cliff.toml",
]

[features]
default = ["process", "redact"]
process = ["dep:tokio-util", "dep:tokio-stream", "dep:tracing"]
redact = ["dep:regex"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"

# Core async runtime (required by WireClient trait and InMemoryWireClient)
tokio = { version = "1.44", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }

# Optional: process transport extras
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }

# Optional: secret redaction
regex = { version = "1.11", optional = true }

[dev-dependencies]
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
proptest = "1.6"
criterion = { version = "0.5", default-features = false, features = ["async_tokio", "html_reports"] }
tempfile = "3.14"

[[example]]
name = "basic_prompt"
required-features = ["process"]

[[example]]
name = "mock_test"
required-features = []
